--- a/presentation-output.html
+++ b/presentation-output.html
@@ -188,14 +188,24 @@
 		<div class="maxwidth">MAX WIDTH</div>
 		<div class="minheight">MIN HEIGHT</div>
 		<div class="maxheight">MAX HEIGHT</div>
-		<div class="hidden">OVERFLOW HIDDEN</div>
-		<div class="scroll">OVERRFLOW SCROLL</div>
+		<div class="overflowhidden">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+		<div class="overflowscroll">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
 		<div class="borderwidth">BORDER WIDTH</div>
 		<div class="borderstyle">BORDER STYLE</div>
 		<div class="bordercolor">BORDER COLOR</div>
 		<div class="inline">INLINE</div>
 		<div class="block">BLOCK</div>
-		<div class="block">INLINE-BLOCK</div>
+		<div class="inline-block">INLINE-BLOCK</div>
 		<div class="none">DISPLAY NONE</div>
 		<div class="hidden">HIDDEN</div>
 		<div class="visible">VISIBLE</div>
@@ -228,7 +238,7 @@
 	<section class="clear">
 		<h2>Background</h2>
 		<div class="backgroundimg">ADDING BACKGOUND IMAGE</div>
-		<div class="repeatz">BACKGROUND REPEAT X</div>
+		<div class="repeatx">BACKGROUND REPEAT X</div>
 		<div class="repeaty">BACKGROUND REPEAT Y</div>
 		<div class="repeat">BACKGROUND REPEAT</div>
 		<div class="norepeat">BACKGROUND NO REPEAT</div>
